--- a/style/style.css
+++ b/style/style.css
@@ -890,6 +890,122 @@ h2 {
         justify-items: center;
     }
 
+    
+
+.cuadro1 {
+    width: 300px;
+    height: 300px;
+    display: grid;
+    margin: 25px;
+    padding: 25px;
+    border-radius: 40px;
+    grid-area: cuadrouno;
+}
+
+.cuadro2 {
+    width: 300px;
+    height: 300px;
+    display: grid;
+    margin: 25px;
+    padding: 25px;
+    border-radius: 40px;
+    grid-area: cuadrodos;
+}
+
+.cuadro3 {
+    width: 300px;
+    height: 300px;
+    display: grid;
+    margin: 25px;
+    padding: 25px;
+    border-radius: 40px;
+    grid-area: cuadrotres;
+}
+
+.cuadro4 {
+    width: 300px;
+    height: 300px;
+    display: grid;
+    margin: 25px;
+    padding: 25px;
+    border-radius: 40px;
+    grid-area: cuadrocuatro;
+}
+
+.cuadro5 {
+    width: 300px;
+    height: 300px;
+    display: grid;
+    margin: 25px;
+    padding: 25px;
+    border-radius: 40px;
+    grid-area: cuadrocinco;
+}
+
+.cuadro6 {
+    width: 300px;
+    height: 300px;
+    display: grid;
+    margin: 25px;
+    padding: 25px;
+    border-radius: 40px;
+    grid-area: cuadroseis;
+}
+
+.cuadro7 {
+    width: 300px;
+    height: 300px;
+    display: grid;
+    margin: 25px;
+    padding: 25px;
+    border-radius: 40px;
+    grid-area: cuadrosiete;
+}
+
+.cuadro8 {
+    width: 300px;
+    height: 300px;
+    display: grid;
+    margin: 25px;
+    padding: 25px;
+    border-radius: 40px;
+    grid-area: cuadroocho;
+}
+
+.cuadro9 {
+    width: 300px;
+    height: 300px;
+    display: grid;
+    margin: 25px;
+    padding: 25px;
+    border-radius: 40px;
+    grid-area: cuadronueve;
+}
+
+.mercadoPago {
+    font-family: 'Ubuntu', sans-serif;
+    font-style: normal;
+    font-weight: bolder;
+    text-align: center;
+    font-size: 12px;
+    line-height: 20px;
+    letter-spacing: 1px;
+    list-style-type: none;
+    display: grid;
+}
+
+.medidas {
+    font-family: 'Ubuntu', sans-serif;
+    font-style: normal;
+    font-weight: bolder;
+    text-align: center;
+    font-size: 15px;
+    line-height: 20px;
+    letter-spacing: 1px;
+    list-style-type: none;
+    display: grid;
+}
+
     /* Contacto */
 
     .contacto {
@@ -1276,7 +1392,7 @@ h2 {
         width: 300px;
         height: 300px;
         display: grid;
-        margin: 25px;
+        margin: auto;
         padding: 25px;
         border-radius: 40px;
         grid-area: cuadrouno;
@@ -1286,7 +1402,7 @@ h2 {
         width: 300px;
         height: 300px;
         display: grid;
-        margin: 25px;
+        margin: auto;
         padding: 25px;
         border-radius: 40px;
         grid-area: cuadrodos;
@@ -1296,7 +1412,7 @@ h2 {
         width: 300px;
         height: 300px;
         display: grid;
-        margin: 25px;
+        margin: auto;
         padding: 25px;
         border-radius: 40px;
         grid-area: cuadrotres;
@@ -1306,7 +1422,7 @@ h2 {
         width: 300px;
         height: 300px;
         display: grid;
-        margin: 25px;
+        margin: auto;
         padding: 25px;
         border-radius: 40px;
         grid-area: cuadrocuatro;
@@ -1316,7 +1432,7 @@ h2 {
         width: 300px;
         height: 300px;
         display: grid;
-        margin: 25px;
+        margin: auto;
         padding: 25px;
         border-radius: 40px;
         grid-area: cuadrocinco;
@@ -1326,7 +1442,7 @@ h2 {
         width: 300px;
         height: 300px;
         display: grid;
-        margin: 25px;
+        margin: auto;
         padding: 25px;
         border-radius: 40px;
         grid-area: cuadroseis;
@@ -1336,7 +1452,7 @@ h2 {
         width: 300px;
         height: 300px;
         display: grid;
-        margin: 25px;
+        margin: auto;
         padding: 25px;
         border-radius: 40px;
         grid-area: cuadrosiete;
@@ -1346,7 +1462,7 @@ h2 {
         width: 300px;
         height: 300px;
         display: grid;
-        margin: 25px;
+        margin: auto;
         padding: 25px;
         border-radius: 40px;
         grid-area: cuadroocho;
@@ -1356,7 +1472,7 @@ h2 {
         width: 300px;
         height: 300px;
         display: grid;
-        margin: 25px;
+        margin: auto;
         padding: 25px;
         border-radius: 40px;
         grid-area: cuadronueve;
