--- a/style/style.css
+++ b/style/style.css
@@ -57,7 +57,8 @@ ul li {
     justify-content: space-around;
     align-items: center;
     margin: auto;
-    padding: 30px;
+    padding: 50px;
+    flex-direction: column-reverse;
 }
 
 .titulo1 img {
@@ -332,7 +333,7 @@ h2 {
     width: 300px;
     height: 300px;
     display: grid;
-    margin: 25px;
+    margin: auto;
     padding: 25px;
     border-radius: 40px;
     grid-area: cuadrouno;
@@ -342,7 +343,7 @@ h2 {
     width: 300px;
     height: 300px;
     display: grid;
-    margin: 25px;
+    margin: auto;
     padding: 25px;
     border-radius: 40px;
     grid-area: cuadrodos;
@@ -352,7 +353,7 @@ h2 {
     width: 300px;
     height: 300px;
     display: grid;
-    margin: 25px;
+    margin: auto;
     padding: 25px;
     border-radius: 40px;
     grid-area: cuadrotres;
@@ -362,7 +363,7 @@ h2 {
     width: 300px;
     height: 300px;
     display: grid;
-    margin: 25px;
+    margin: auto;
     padding: 25px;
     border-radius: 40px;
     grid-area: cuadrocuatro;
@@ -372,7 +373,7 @@ h2 {
     width: 300px;
     height: 300px;
     display: grid;
-    margin: 25px;
+    margin: auto;
     padding: 25px;
     border-radius: 40px;
     grid-area: cuadrocinco;
@@ -382,7 +383,7 @@ h2 {
     width: 300px;
     height: 300px;
     display: grid;
-    margin: 25px;
+    margin: auto;
     padding: 25px;
     border-radius: 40px;
     grid-area: cuadroseis;
@@ -392,7 +393,7 @@ h2 {
     width: 300px;
     height: 300px;
     display: grid;
-    margin: 25px;
+    margin: auto;
     padding: 25px;
     border-radius: 40px;
     grid-area: cuadrosiete;
@@ -402,7 +403,7 @@ h2 {
     width: 300px;
     height: 300px;
     display: grid;
-    margin: 25px;
+    margin: auto;
     padding: 25px;
     border-radius: 40px;
     grid-area: cuadroocho;
@@ -412,7 +413,7 @@ h2 {
     width: 300px;
     height: 300px;
     display: grid;
-    margin: 25px;
+    margin: auto;
     padding: 25px;
     border-radius: 40px;
     grid-area: cuadronueve;
@@ -889,8 +890,6 @@ h2 {
             "celedoce";
         justify-items: center;
     }
-
-    
 
 .cuadro1 {
     width: 300px;
