--- a/style/style.css
+++ b/style/style.css
@@ -52,18 +52,17 @@ ul li {
 .titulo1 {
     background-color: white;
     width: 360px;
-    height: 100px;
+    height: 150px;
     display: flex;
     justify-content: space-around;
     align-items: center;
     margin: auto;
     padding: 50px;
-    flex-direction: column-reverse;
 }
 
 .titulo1 img {
-    width: 300px;
-    height: 100px;
+    width: 360px;
+    height: 150px;
 }
 
 h1 {
@@ -76,7 +75,7 @@ h1 {
     letter-spacing: 1px;
     list-style-type: none;
     padding: 30px;
-    margin: 20px;
+    margin: auto;
 }
 
 .bienvenido {
@@ -651,7 +650,7 @@ h2 {
     font-style: normal;
     font-weight: bolder;
     text-align: center;
-    font-size: 10px;
+    font-size: 15px;
     line-height: 20px;
     letter-spacing: 1px;
     list-style-type: none;
@@ -686,6 +685,15 @@ h2 {
     display: grid;
     justify-content: center;
     grid-area: formu;
+}
+
+.form-label {
+    width: 550px;
+}
+
+.col-auto {
+display: flex;
+justify-content: center;
 }
 
 @media (min-width: 575px) {
